@@ -7,10 +7,7 @@ import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.nio.file.Files;
-import java.util.Arrays;
-import java.util.List;
-import java.util.Map;
-import java.util.Optional;
+import java.util.*;
 import java.util.concurrent.ConcurrentHashMap;
 import liquibase.Contexts;
 import liquibase.LabelExpression;
@@ -21,11 +18,10 @@ import liquibase.resource.ClassLoaderResourceAccessor;
 import org.flywaydb.core.Flyway;
 import org.jetbrains.annotations.ApiStatus.Internal;
 import org.jetbrains.annotations.NotNull;
+import org.jetbrains.annotations.Nullable;
 import org.junit.jupiter.api.extension.*;
 import org.junit.platform.commons.support.AnnotationSupport;
 import org.junit.platform.commons.util.ReflectionUtils;
-import org.junit.platform.launcher.TestExecutionListener;
-import org.junit.platform.launcher.TestPlan;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.slf4j.bridge.SLF4JBridgeHandler;
@@ -33,24 +29,45 @@ import org.testcontainers.containers.GenericContainer;
 import org.testcontainers.containers.JdbcDatabaseContainer;
 
 @Internal
-abstract class AbstractTestcontainersJdbcExtension implements
+abstract class AbstractTestcontainersJdbcExtension<C extends JdbcDatabaseContainer> implements
         BeforeAllCallback,
         BeforeEachCallback,
         AfterAllCallback,
         AfterEachCallback,
-        TestExecutionListener,
         ParameterResolver {
 
     private static final ExtensionContext.Namespace NAMESPACE = ExtensionContext.Namespace
             .create(AbstractTestcontainersJdbcExtension.class);
 
-    private static final Map<String, ExtensionContainer> IMAGE_TO_SHARED_CONTAINER = new ConcurrentHashMap<>();
-    private static volatile JdbcConnection externalConnection = null;
+    private static final Map<String, ExtensionContainerImpl> IMAGE_TO_SHARED_CONTAINER = new ConcurrentHashMap<>();
     private static volatile boolean isLiquibaseActivated = false;
 
-    private final Logger logger = LoggerFactory.getLogger(getClass());
+    protected final Logger logger = LoggerFactory.getLogger(getClass());
+    private JdbcConnection externalConnection = null;
 
-    private record ExtensionContainer(JdbcDatabaseContainer<?> container, JdbcConnection connection) {}
+    private static final class ExtensionContainerImpl implements ExtensionContainer {
+
+        private final JdbcDatabaseContainer<?> container;
+        private final JdbcConnection connection;
+
+        ExtensionContainerImpl(JdbcDatabaseContainer<?> container, JdbcConnection connection) {
+            this.container = container;
+            this.connection = connection;
+        }
+
+        JdbcConnection connection() {
+            return connection;
+        }
+
+        @Override
+        public void stop() {
+            container.stop();
+        }
+    }
+
+    static List<ExtensionContainer> getSharedContainers() {
+        return new ArrayList<>(IMAGE_TO_SHARED_CONTAINER.values());
+    }
 
     protected final <T extends Annotation> Optional<T> findAnnotation(Class<T> annotationType, ExtensionContext context) {
         Optional<ExtensionContext> current = Optional.of(context);
@@ -66,7 +83,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
         return Optional.empty();
     }
 
-    protected Optional<JdbcDatabaseContainer<?>> getContainerFromField(ExtensionContext context) {
+    protected Optional<C> getContainerFromField(ExtensionContext context) {
         logger.debug("Looking for JDBC Container...");
         final Class<? extends Annotation> containerAnnotation = getContainerAnnotation();
         return ReflectionUtils.findFields(context.getRequiredTestClass(),
@@ -81,37 +98,53 @@ abstract class AbstractTestcontainersJdbcExtension implements
                                 Object possibleContainer = field.get(instance);
                                 var containerType = getContainerType();
                                 if (containerType.isAssignableFrom(possibleContainer.getClass())) {
-                                    logger.debug("Found SQL Container in field: {}", field.getName());
-                                    return ((JdbcDatabaseContainer<?>) possibleContainer);
+                                    logger.debug("Found JDBC Container in field: {}", field.getName());
+                                    return ((C) possibleContainer);
                                 } else {
-                                    throw new IllegalArgumentException(
-                                            "Field '%s' annotated with @%s value must be instance of %s".formatted(
-                                                    field.getName(), containerAnnotation.getSimpleName(), containerType));
+                                    throw new IllegalArgumentException(String.format(
+                                            "Field '%s' annotated with @%s value must be instance of %s",
+                                            field.getName(), containerAnnotation.getSimpleName(), containerType));
                                 }
                             } catch (IllegalAccessException e) {
-                                throw new IllegalStateException("Failed retrieving value from field '%s' annotated with @%s"
-                                        .formatted(field.getName(), containerAnnotation.getSimpleName()), e);
+                                throw new IllegalStateException(
+                                        String.format("Failed retrieving value from field '%s' annotated with @%s",
+                                                field.getName(), containerAnnotation.getSimpleName()),
+                                        e);
                             }
                         }));
     }
 
-    abstract Class<? extends JdbcDatabaseContainer> getContainerType();
+    abstract Class<C> getContainerType();
 
     abstract Class<? extends Annotation> getContainerAnnotation();
 
     abstract Class<? extends Annotation> getConnectionAnnotation();
 
     @NotNull
-    abstract JdbcDatabaseContainer<?> getDefaultContainer(@NotNull String image);
+    abstract C getDefaultContainer(@NotNull ContainerMetadata metadata);
 
     @NotNull
     abstract Optional<ContainerMetadata> findMetadata(@NotNull ExtensionContext context);
 
     @NotNull
-    abstract JdbcConnection getConnectionForContainer(@NotNull JdbcDatabaseContainer<?> container);
+    abstract JdbcConnection getConnectionForContainer(@NotNull C container);
 
     @NotNull
     abstract Optional<JdbcConnection> getConnectionExternal();
+
+    @Nullable
+    private JdbcConnection getConnectionExternalCached() {
+        if (this.externalConnection == null) {
+            this.externalConnection = getConnectionExternal().orElse(null);
+        }
+
+        if (this.externalConnection != null) {
+            logger.debug("Found external connection to database, no containers will be created during tests: {}",
+                    externalConnection);
+        }
+
+        return this.externalConnection;
+    }
 
     private ContainerMetadata getMetadata(@NotNull ExtensionContext context) {
         return findMetadata(context).orElseThrow(() -> new ExtensionConfigurationException("Extension annotation not found"));
@@ -151,7 +184,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
                     : locations;
 
             if (!isLiquibaseActivated) {
-                final boolean julEnabled = Optional.ofNullable(System.getenv("TEST_CONTAINERS_EXTENSION_SQL_JUL_ENABLED"))
+                final boolean julEnabled = Optional.ofNullable(System.getenv("TEST_CONTAINERS_EXTENSION_JDBC_JUL_ENABLED"))
                         .map(Boolean::parseBoolean)
                         .orElse(true);
 
@@ -198,13 +231,17 @@ abstract class AbstractTestcontainersJdbcExtension implements
 
     private void tryMigrateIfRequired(ContainerMetadata annotation, JdbcConnection jdbcConnection) {
         if (annotation.migration().engine() == Migration.Engines.FLYWAY) {
-            logger.debug("Starting schema migration for engine '{}' for connection: {}", annotation.migration().engine(),
-                    jdbcConnection);
+            logger.debug("Starting schema migration for engine '{}' for connection: {}",
+                    annotation.migration().engine(), jdbcConnection);
             migrateFlyway(jdbcConnection, Arrays.asList(annotation.migration().migrations()));
+            logger.debug("Finished schema migration for engine '{}' for connection: {}",
+                    annotation.migration().engine(), jdbcConnection);
         } else if (annotation.migration().engine() == Migration.Engines.LIQUIBASE) {
-            logger.debug("Starting schema migration for engine '{}' for connection: {}", annotation.migration().engine(),
-                    jdbcConnection);
+            logger.debug("Starting schema migration for engine '{}' for connection: {}",
+                    annotation.migration().engine(), jdbcConnection);
             migrateLiquibase(jdbcConnection, Arrays.asList(annotation.migration().migrations()));
+            logger.debug("Finished schema migration for engine '{}' for connection: {}",
+                    annotation.migration().engine(), jdbcConnection);
         }
     }
 
@@ -236,7 +273,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
                     field.setAccessible(true);
                     field.set(instance, connection);
                 } catch (IllegalAccessException e) {
-                    throw new IllegalStateException("Field '%s' annotated with @%s can't set connection".formatted(
+                    throw new IllegalStateException(String.format("Field '%s' annotated with @%s can't set connection",
                             field.getName(), connectionAnnotation.getSimpleName()), e);
                 }
             }
@@ -244,23 +281,16 @@ abstract class AbstractTestcontainersJdbcExtension implements
     }
 
     @Override
-    public void testPlanExecutionStarted(TestPlan testPlan) {
-        externalConnection = getConnectionExternal().orElse(null);
-        if (externalConnection != null) {
-            logger.debug("Found external connection to database, no containers will be created during tests: {}",
-                    externalConnection);
-        }
-    }
-
-    @Override
     public void beforeAll(ExtensionContext context) throws Exception {
         var metadata = getMetadata(context);
 
+        var externalConnection = getConnectionExternalCached();
         if (externalConnection != null) {
             if (metadata.migration().apply() == Migration.Mode.PER_CLASS) {
                 tryMigrateIfRequired(metadata, externalConnection);
             }
 
+            injectSqlConnection(externalConnection, context);
             return;
         }
 
@@ -271,15 +301,15 @@ abstract class AbstractTestcontainersJdbcExtension implements
 
             var extensionContainer = IMAGE_TO_SHARED_CONTAINER.computeIfAbsent(imageToLook, k -> {
                 var container = containerFromField.orElseGet(() -> {
-                    logger.debug("Getting default SQL Container for image: {}", metadata.image());
-                    return getDefaultContainer(metadata.image());
+                    logger.debug("Getting default JDBC Container for image: {}", metadata.image());
+                    return getDefaultContainer(metadata);
                 });
 
-                logger.debug("Starting in mode '{}' SQL Container: {}", metadata.runMode(), container);
-                container.start();
-                container.withReuse(true);
+                logger.debug("Starting in mode '{}' JDBC Container: {}", metadata.runMode(), container);
+                container.withReuse(true).start();
+                logger.debug("Started successfully in mode '{}' JDBC Container: {}", metadata.runMode(), container);
                 var sqlConnection = getConnectionForContainer(container);
-                return new ExtensionContainer(container, sqlConnection);
+                return new ExtensionContainerImpl(container, sqlConnection);
             });
 
             storage.put(JdbcConnection.class, extensionContainer.connection());
@@ -287,22 +317,25 @@ abstract class AbstractTestcontainersJdbcExtension implements
             if (metadata.migration().apply() == Migration.Mode.PER_CLASS) {
                 tryMigrateIfRequired(metadata, extensionContainer.connection());
             }
+            injectSqlConnection(extensionContainer.connection(), context);
         } else if (metadata.runMode() == ContainerMode.PER_CLASS) {
             var container = getContainerFromField(context).orElseGet(() -> {
-                logger.debug("Getting default SQL Container for image: {}", metadata.image());
-                return getDefaultContainer(metadata.image());
+                logger.debug("Getting default JDBC Container for image: {}", metadata.image());
+                return getDefaultContainer(metadata);
             });
 
-            logger.debug("Starting in mode '{}' SQL Container: {}", metadata.runMode(), container);
+            logger.debug("Starting in mode '{}' JDBC Container: {}", metadata.runMode(), container);
             container.start();
+            logger.debug("Started successfully in mode '{}' JDBC Container: {}", metadata.runMode(), container);
             var sqlConnection = getConnectionForContainer(container);
-            var extensionContainer = new ExtensionContainer(container, sqlConnection);
+            var extensionContainer = new ExtensionContainerImpl(container, sqlConnection);
             storage.put(ContainerMode.PER_CLASS, extensionContainer);
             storage.put(JdbcConnection.class, sqlConnection);
 
             if (metadata.migration().apply() == Migration.Mode.PER_CLASS) {
                 tryMigrateIfRequired(metadata, sqlConnection);
             }
+            injectSqlConnection(sqlConnection, context);
         }
     }
 
@@ -310,11 +343,11 @@ abstract class AbstractTestcontainersJdbcExtension implements
     public void beforeEach(ExtensionContext context) throws Exception {
         var metadata = getMetadata(context);
 
+        var externalConnection = getConnectionExternalCached();
         if (externalConnection != null) {
             if (metadata.migration().apply() == Migration.Mode.PER_METHOD) {
                 tryMigrateIfRequired(metadata, externalConnection);
             }
-
             injectSqlConnection(externalConnection, context);
             return;
         }
@@ -322,12 +355,13 @@ abstract class AbstractTestcontainersJdbcExtension implements
         var storage = context.getStore(NAMESPACE);
         if (metadata.runMode() == ContainerMode.PER_METHOD) {
             var container = getContainerFromField(context).orElseGet(() -> {
-                logger.debug("Getting default SQL Container for image: {}", metadata.image());
-                return getDefaultContainer(metadata.image());
+                logger.debug("Getting default JDBC Container for image: {}", metadata.image());
+                return getDefaultContainer(metadata);
             });
 
-            logger.debug("Starting in mode '{}' SQL Container: {}", metadata.runMode(), container);
+            logger.debug("Starting in mode '{}' JDBC Container: {}", metadata.runMode(), container);
             container.start();
+            logger.debug("Started successfully in mode '{}' JDBC Container: {}", metadata.runMode(), container);
             var sqlConnection = getConnectionForContainer(container);
 
             if (metadata.migration().apply() == Migration.Mode.PER_METHOD) {
@@ -336,14 +370,13 @@ abstract class AbstractTestcontainersJdbcExtension implements
 
             injectSqlConnection(sqlConnection, context);
             storage.put(JdbcConnection.class, sqlConnection);
-            storage.put(ContainerMode.PER_METHOD, new ExtensionContainer(container, sqlConnection));
+            storage.put(ContainerMode.PER_METHOD, new ExtensionContainerImpl(container, sqlConnection));
         } else {
             var sqlConnection = storage.get(JdbcConnection.class, JdbcConnection.class);
-            injectSqlConnection(sqlConnection, context);
-
             if (metadata.migration().apply() == Migration.Mode.PER_METHOD) {
                 tryMigrateIfRequired(metadata, sqlConnection);
             }
+            injectSqlConnection(sqlConnection, context);
         }
     }
 
@@ -351,6 +384,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
     public void afterEach(ExtensionContext context) throws Exception {
         var metadata = getMetadata(context);
 
+        var externalConnection = getConnectionExternalCached();
         if (externalConnection != null) {
             if (metadata.migration().drop() == Migration.Mode.PER_METHOD) {
                 tryDropIfRequired(metadata, externalConnection);
@@ -361,13 +395,15 @@ abstract class AbstractTestcontainersJdbcExtension implements
 
         var storage = context.getStore(NAMESPACE);
         if (metadata.runMode() == ContainerMode.PER_METHOD) {
-            var extensionContainer = storage.get(ContainerMode.PER_METHOD, ExtensionContainer.class);
+            var extensionContainer = storage.get(ContainerMode.PER_METHOD, ExtensionContainerImpl.class);
             if (extensionContainer != null) {
-                logger.debug("Stopping in mode '{}' SQL Container: {}", metadata.runMode(), extensionContainer.container);
-                extensionContainer.container().stop();
+                logger.debug("Stopping in mode '{}' JDBC Container: {}", metadata.runMode(), extensionContainer.container);
+                extensionContainer.stop();
+                logger.debug("Stopped successfully in mode '{}' JDBC Container: {}", metadata.runMode(),
+                        extensionContainer.container);
             }
         } else if (metadata.runMode() == ContainerMode.PER_CLASS) {
-            var extensionContainer = storage.get(ContainerMode.PER_CLASS, ExtensionContainer.class);
+            var extensionContainer = storage.get(ContainerMode.PER_CLASS, ExtensionContainerImpl.class);
             if (metadata.migration().drop() == Migration.Mode.PER_METHOD) {
                 tryDropIfRequired(metadata, extensionContainer.connection());
             }
@@ -384,6 +420,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
     public void afterAll(ExtensionContext context) throws Exception {
         var metadata = getMetadata(context);
 
+        var externalConnection = getConnectionExternalCached();
         if (externalConnection != null) {
             if (metadata.migration().drop() == Migration.Mode.PER_CLASS) {
                 tryDropIfRequired(metadata, externalConnection);
@@ -394,10 +431,12 @@ abstract class AbstractTestcontainersJdbcExtension implements
 
         var storage = context.getStore(NAMESPACE);
         if (metadata.runMode() == ContainerMode.PER_CLASS) {
-            var extensionContainer = storage.get(ContainerMode.PER_CLASS, ExtensionContainer.class);
+            var extensionContainer = storage.get(ContainerMode.PER_CLASS, ExtensionContainerImpl.class);
             if (extensionContainer != null) {
-                logger.debug("Stopping in mode '{}' SQL Container: {}", metadata.runMode(), extensionContainer.container);
-                extensionContainer.container().stop();
+                logger.debug("Stopping in mode '{}' JDBC Container: {}", metadata.runMode(), extensionContainer.container);
+                extensionContainer.stop();
+                logger.debug("Stopped successfully in mode '{}' JDBC Container: {}", metadata.runMode(),
+                        extensionContainer.container);
             }
         } else if (metadata.runMode() == ContainerMode.PER_RUN) {
             Optional.ofNullable(IMAGE_TO_SHARED_CONTAINER.get(metadata.image())).ifPresent(extensionContainer -> {
@@ -405,14 +444,6 @@ abstract class AbstractTestcontainersJdbcExtension implements
                     tryDropIfRequired(metadata, extensionContainer.connection());
                 }
             });
-        }
-    }
-
-    @Override
-    public void testPlanExecutionFinished(TestPlan testPlan) {
-        for (ExtensionContainer container : IMAGE_TO_SHARED_CONTAINER.values()) {
-            logger.debug("Stopping in mode '{}' SQL Container: {}", ContainerMode.PER_RUN, container);
-            container.container().stop();
         }
     }
 
@@ -428,7 +459,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
         }
 
         if (!parameterContext.getParameter().getType().equals(JdbcConnection.class)) {
-            throw new ExtensionConfigurationException("Parameter '%s' annotated @%s is not of type %s".formatted(
+            throw new ExtensionConfigurationException(String.format("Parameter '%s' annotated @%s is not of type %s",
                     parameterContext.getParameter().getName(), connectionAnnotation.getSimpleName(),
                     JdbcConnection.class));
         }
@@ -439,6 +470,7 @@ abstract class AbstractTestcontainersJdbcExtension implements
     @Override
     public Object resolveParameter(ParameterContext parameterContext, ExtensionContext extensionContext)
             throws ParameterResolutionException {
+        var externalConnection = getConnectionExternalCached();
         if (externalConnection != null) {
             return externalConnection;
         }
